--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,6 @@ jobs:
 
   - task: PublishBuildArtifacts@1
     inputs:
-      pathtoPublish: '$(Build.ArtifactStagingDirectory)/kernel/'
+      pathtoPublish: '$(Build.ArtifactStagingDirectory)/kernel/kernel.tar.gz'
       artifactName: kernel
     displayName: Publish kernel
