--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -158,8 +158,8 @@ jobs:
 
       echo Copying Debian packages
       cd ..
-      find var/log -iname '*.deb' -print0
-      find var/log -iname '*.deb' -print0 | tar -cvf $BUILD_ARTIFACTSTAGINGDIRECTORY/kernel/$(KERNEL_BRANCH).deb.tar --null -T -
+      find . -iname '*.deb' -print0
+      find . -iname '*.deb' -print0 | tar -cvf $BUILD_ARTIFACTSTAGINGDIRECTORY/kernel/$(KERNEL_BRANCH).deb.tar --null -T -
       gzip $BUILD_ARTIFACTSTAGINGDIRECTORY/kernel/$(KERNEL_BRANCH).deb.tar
     displayName: Compile the kernel
 
