--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,12 @@ jobs:
       4.20rc4-gvt:
         KERNEL_REPOSITORY: https://github.com/kubedroid/linux
         KERNEL_BRANCH: kernel-4.20rc4-gvt
+      4.20rc4-gvt:
+        KERNEL_REPOSITORY: https://github.com/kubedroid/linux
+        KERNEL_BRANCH: kernel-4.20rc4-gvt
+      gvt-next-android:
+        KERNEL_REPOSITORY: https://github.com/kubedroid/linux
+        KERNEL_BRANCH: gvt-next-android
   steps:
   - script: |
       sudo apt-get install -y build-essential git bison flex libssl-dev libelf-dev bc python wget
@@ -137,7 +143,7 @@ jobs:
       export INSTALL_PATH=$install
 
       echo Configuring kernel configuration
-      echo "" | make oldconfig
+      echo "" | make olddefconfig
 
       # Disabling DEBUG_INFO to prevent the debug packages from being generated,
       # see https://superuser.com/questions/925079/compile-linux-kernel-deb-pkg-target-without-generating-dbg-package
